--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section class="projects" id="projects">
             <h2>Projects</h2>
             <hr>
-            <p class="certification-name">Responsive Web Design (freeCodeCamp)</p>
+            <p class="certification-name">Responsive Web Design</p>
             <div class="web-design">
                 <div class="project-tile">
                     <a href="https://codepen.io/jessislearning/full/xxoxqEp" target="_blank">
