Populating Scientific Computing with Python

--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
                 </ul>
                 <p class="certification-name" style="text-align:center">View my certificate and project descriptions <a href="https://www.credly.com/badges/4c280a1c-6eaf-4cfd-983e-33ffda95d396" target="_blank" >here</a></p>
             </div>
+            <div class="data-analysis">
+                <hr>
+                <p class="certification-name">Scientific Computing with Python</p>
+                <ul>
+                <li><a class="project-link" href="https://github.com/jessislearning/arithmetic-formatter" target="_blank">Arithmetic Formatter</a></li><br>
+                <li><a class="project-link" href="https://github.com/jessislearning/time-calculator" target="_blank">Time Calculator</a></li><br>
+                <li><a class="project-link" href="https://github.com/jessislearning/budget-app" target="_blank">Budget App</li><br>
+                </ul>
         </section>
         <footer class="connect-section" id="connect-section">
             <div class="connect">
@@ -103,6 +111,7 @@
             <a class="socials" href="https://www.linkedin.com/in/jessica-afalla/" target="_blank"><i class="fab fa-linkedin-in"></i> Jessica-Afalla</a>
             <a class="socials" href="https://github.com/jessislearning" target="_blank"><i class="fab fa-github"></i> jessislearning</a>
             <a class="socials" href="https://www.freecodecamp.org/jessislearning" id="profile-link" target="_blank"><i class="fab fa-free-code-camp"></i> jessislearning</a>
+            
             </div>
         </div>
     </footer>
