added scientific computation with python certification

--- a/index.html
+++ b/index.html
@@ -99,8 +99,11 @@
                 <ul>
                 <li><a class="project-link" href="https://github.com/jessislearning/arithmetic-formatter" target="_blank">Arithmetic Formatter</a></li><br>
                 <li><a class="project-link" href="https://github.com/jessislearning/time-calculator" target="_blank">Time Calculator</a></li><br>
-                <li><a class="project-link" href="https://github.com/jessislearning/budget-app" target="_blank">Budget App</li><br>
+                <li><a class="project-link" href="https://github.com/jessislearning/budget-app" target="_blank">Budget App</a></li><br>
+                <li><a class="project-link" href="https://github.com/jessislearning/polygon-area-calculator" target="_blank">Polygon Area Calculator</a></li><br>
+                <li><a class="project-link" href="https://github.com/jessislearning/probability-calculator" target="_blank">Probability Calculator</a></li><br>
                 </ul>
+                <p class="certification-name" style="text-align:center">View my developer certificate <a href="https://www.freecodecamp.org/certification/jessislearning/scientific-computing-with-python-v7" target="_blank" >here</a></p>
         </section>
         <footer class="connect-section" id="connect-section">
             <div class="connect">
